--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-ui",
-  "version": "1.0.0",
-  "description": "Made with create-react-library",
+  "name": "padez-react-ui",
+  "version": "0.0.1",
+  "description": "UI components for react",
   "author": "andrepadez",
   "license": "MIT",
   "repository": "andrepadez/react-ui",
@@ -12,8 +12,11 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle-crl --no-compress --format modern,cjs",
+    "build:js": "microbundle-crl --no-compress --format modern,cjs",
+    "build:sass": "node-sass --output-style compressed src/sass/index.scss > dist/index.css",
+    "build": "run-s build:js build:sass",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
+    "watch:sass": "node-sass --watch --recursive --output dist --source-map true --source-map-contents src/sass/index.scss",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
@@ -27,7 +30,6 @@
     "react": "^16.0.0"
   },
   "devDependencies": {
-    "microbundle-crl": "^0.13.10",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
@@ -41,13 +43,15 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
+    "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
   },
-  "files": [
-    "dist"
-  ]
+  "files": ["dist"],
+  "dependencies": {
+    "node-sass": "^4.0.0"
+  }
 }
