--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
-  "singleQuote": true,
-  "jsxSingleQuote": true,
+  "trailingComma": "none",
   "semi": false,
+  "singleQuote": true,
+  "printWidth": 120,
+  "jsxSingleQuote": false,
   "tabWidth": 2,
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "arrowParens": "always",
-  "trailingComma": "none"
 }
